// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/ProgressBar Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-bPyhqo dWxQcS"
  >
    <div
      class="sc-fvNpTx hqRdaF sc-fctJkW gfcSxi"
      color="#fff"
    >
      <div
        class="sc-jTYCaT eFodso"
      >
        10
        %
      </div>
      <div
        class="sc-cZwWEu hAnkiz"
        style="width: 10%;"
      >
        <div
          class="sc-jQHtVU ezQmmd"
          style="width: 1000%;"
        >
          10
          %
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/ProgressBar Different Color 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-bPyhqo dWxQcS"
  >
    <div
      class="sc-fvNpTx hqRdaF sc-fctJkW gfcSxi"
      color="#fff"
      type="danger"
    >
      <div
        class="sc-jTYCaT eFodso"
      >
        10
        %
      </div>
      <div
        class="sc-cZwWEu zdrht"
        style="width: 10%;"
      >
        <div
          class="sc-jQHtVU ezQmmd"
          style="width: 1000%;"
        >
          10
          %
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/ProgressBar Emphasized 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-bPyhqo dWxQcS"
  >
    <div
      class="sc-fvNpTx kYeMME sc-fctJkW gfcSxi"
      color="#fff"
    >
      <div
        class="sc-jTYCaT eFodso"
      >
        10
        %
      </div>
      <div
        class="sc-cZwWEu hAnkiz"
        style="width: 10%;"
      >
        <div
          class="sc-jQHtVU ezQmmd"
          style="width: 1000%;"
        >
          10
          %
        </div>
      </div>
    </div>
  </div>
</div>
`;
